
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_2__ ;
typedef struct TYPE_8__ TYPE_1__ ;


typedef int data ;
struct TYPE_9__ {scalar_t__ (* put ) (TYPE_2__*,TYPE_1__*,TYPE_1__*,int ) ;int (* close ) (TYPE_2__*) ;} ;
struct TYPE_8__ {char const** data; int size; } ;
typedef TYPE_1__ DBT ;
typedef TYPE_2__ DB ;


 int DB_HASH ;
 int O_CREAT ;
 int O_RDWR ;
 int O_TRUNC ;
 char* _malloc_options ;
 TYPE_2__* dbopen (char*,int,int,int ,int *) ;
 int err (int,char*) ;
 scalar_t__ stub1 (TYPE_2__*,TYPE_1__*,TYPE_1__*,int ) ;
 int stub2 (TYPE_2__*) ;

int
main()
{
 const char data[] = "abcd";
 DB *db;
 DBT dbt;






 _malloc_options = "J";

 db = dbopen("test.db", O_RDWR | O_CREAT | O_TRUNC, 0644, DB_HASH, ((void*)0));
 if (db == ((void*)0))
  err(1, "dbopen()");

 dbt.data = &data;
 dbt.size = sizeof(data);

 if (db->put(db, &dbt, &dbt, 0) != 0)
  err(1, "db->put()");

 db->close(db);

 return (0);
}
